--- a/src/Make.config
+++ b/src/Make.config
@@ -46,7 +46,9 @@ endif
 DEFINES =
 WARNINGS = -Wall -W -Wstrict-prototypes -Wmissing-prototypes -Wsystem-headers
 # klaar36@ida 2015-03: -fno-omit-frame-pointer to get working backtrace
-CFLAGS = -g -msoft-float -fno-omit-frame-pointer -O $(CFLAG_STACK_PROTECTOR)
+# klaar36@ida 2016-05: -ffreestanding to assert freestanding environment
+# klaar36@ida 2016-05: -fno-inline to ease debugging
+CFLAGS = -std=gnu99 -ggdb -msoft-float -fno-omit-frame-pointer -ffreestanding -fno-inline -O $(CFLAG_STACK_PROTECTOR)
 CPPFLAGS = -nostdinc -I$(SRCDIR) -I$(SRCDIR)/lib
 ASFLAGS = -Wa,--gstabs
 LDFLAGS = 
