--- a/src/Makefile.kernel
+++ b/src/Makefile.kernel
@@ -16,5 +16,8 @@ build/Makefile: ../Makefile.build
 build/%: $(DIRS) build/Makefile
 	cd build && $(MAKE) $*
 
+examples:
+	make -C ../examples
+
 clean:
 	rm -rf build
